# awesome_wotlk

./: .gitignore  CMakeLists.txt  CMakeSettings.json
docs/: api_reference.md  readme.md
src/: CMakeLists.txt
src/AwesomeWotlkLib/: BugFixes.cpp  BugFixes.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  Entry.cpp  GameClient.h  Hooks.cpp  Hooks.h  Inventory.cpp  Inventory.h  LuaAPI.cpp  LuaAPI.h  Misc.cpp  Misc.h  NamePlates.cpp  NamePlates.h  UnitAPI.cpp  UnitAPI.h  Utils.cpp  Utils.h
src/AwesomeWotlkPatch/: CMakeLists.txt  Main.cpp  Patch.h  Utils.h
